MALAWISUP-6600: Dashboard reports definition
